# cpu-perf-counters.js

./: CHANGELOG.md  CMakeLists.txt  README.md  index.d.ts  index.js  package-lock.json  package.json
.github/workflows/: e2e.yaml  main.yaml  publish.yaml
docs/: faq.md
src/: addon.cc  counter_group.h  counter_group.linux.cc  counter_group.unknown.cc
tests/: lib.test.js
